docs/api/qiskit/0.45/qiskit.passmanager.ConditionalController.mdx
---
title: ConditionalController
description: API reference for qiskit.passmanager.ConditionalController
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.passmanager.ConditionalController
---

# ConditionalController

<Class id="qiskit.passmanager.ConditionalController" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.45/qiskit/passmanager/flow_controllers.py" signature="qiskit.passmanager.ConditionalController(tasks=(), condition=None, *, options=None)">
  Bases: [`BaseController`](qiskit.passmanager.BaseController "qiskit.passmanager.base_tasks.BaseController")

  A flow controller runs the pipeline once if the condition is true, or does nothing if the condition is false.

  Create new flow controller.

  **Parameters**

  **options** ([*dict*](https://docs.python.org/3/library/stdtypes.html#dict "(in Python v3.12)")*\[*[*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.12)")*, Any] | None*) – Option for this flow controller.

  ## Attributes

  ### passes

  <Attribute id="qiskit.passmanager.ConditionalController.passes" name="passes">
    Alias of tasks for backward compatibility.
  </Attribute>

  ## Methods

  ### append

  <Function id="qiskit.passmanager.ConditionalController.append" name="append" signature="append(passes)">
    Add new task to pipeline.

    <Admonition title="Deprecated since version 0.45.0" type="danger">
      The method `qiskit.passmanager.flow_controllers.ConditionalController.append()` is deprecated as of qiskit 0.45.0. It will be removed no earlier than 3 months after the release date. All tasks must be provided at construction time of the controller object.
    </Admonition>

    **Parameters**

    **passes** (*Task |* [*list*](https://docs.python.org/3/library/stdtypes.html#list "(in Python v3.12)")*\[Task]*) – A new task or list of tasks to add.
  </Function>

  ### execute

  <Function id="qiskit.passmanager.ConditionalController.execute" name="execute" signature="execute(passmanager_ir, state, callback=None)">
    Execute optimization task for input Qiskit IR.

    **Parameters**

    *   **passmanager\_ir** ([*Any*](https://docs.python.org/3/library/typing.html#typing.Any "(in Python v3.12)")) – Qiskit IR to optimize.
    *   **state** ([*PassManagerState*](qiskit.passmanager.PassManagerState "qiskit.passmanager.compilation_status.PassManagerState")) – State associated with workflow execution by the pass manager itself.
    *   **callback** ([*Callable*](https://docs.python.org/3/library/collections.abc.html#collections.abc.Callable "(in Python v3.12)") *| None*) – A callback function which is caller per execution of optimization task.

    **Returns**

    Optimized Qiskit IR and state of the workflow.

    **Return type**

    [tuple](https://docs.python.org/3/library/stdtypes.html#tuple "(in Python v3.12)")\[[*Any*](https://docs.python.org/3/library/typing.html#typing.Any "(in Python v3.12)"), [qiskit.passmanager.compilation\_status.PassManagerState](qiskit.passmanager.PassManagerState "qiskit.passmanager.compilation_status.PassManagerState")]
  </Function>

  ### iter\_tasks

  <Function id="qiskit.passmanager.ConditionalController.iter_tasks" name="iter_tasks" signature="iter_tasks(state)">
    A custom logic to choose a next task to run.

    Controller subclass can consume the state to build a proper task pipeline. The updated state after a task execution will be fed back in as the “return” value of any `yield` statements. This indicates the order of task execution is only determined at running time. This method is not allowed to mutate the given state object.

    **Parameters**

    *   **state** ([*PassManagerState*](qiskit.passmanager.PassManagerState "qiskit.passmanager.compilation_status.PassManagerState")) – The state of the passmanager workflow at the beginning of this flow controller’s execution.
    *   **state** – the state of pass manager after the execution of the last task that was yielded. The generator does not need to inspect this if it is irrelevant to its logic, nor update it.

    **Yields**

    *Task* – Next task to run.

    **Return type**

    [*Generator*](https://docs.python.org/3/library/collections.abc.html#collections.abc.Generator "(in Python v3.12)")\[*Task*, [*PassManagerState*](qiskit.passmanager.PassManagerState "qiskit.passmanager.compilation_status.PassManagerState"), None]
  </Function>
</Class>

